Fix CQ and javadocs